# RAG

./: .env  .gitignore  Dockerfile  README.md  aaaa.json  docker-compose.yml  main.py  requirements.txt  test.txt
RAG_ddbb/: .env  Dockerfile  README.md  config.py  enums_type.py  main.py  requirements.txt
RAG_ddbb/controllers/: controllers.py  credentials_controllers.py
RAG_ddbb/model/: rag_model.py
RAG_ddbb/routes/: routes.py
RAG_documents/: .env  Dockerfile  README.md  main.py  requirements.txt
RAG_documents/controllers/: controllers.py  credentials_controllers.py
RAG_documents/db/: chroma.py  chroma_cli.py  chroma_manager.py  model_conf.py  pdf_tools.py  tools.py
RAG_documents/routes/: routes.py
RAG_excels/: Dockerfile  README.md  main.py  pyproject.toml
RAG_excels/controllers/: controllers.py
RAG_excels/models/: agent.py  excel_loader.py  model.py  tools.py
RAG_excels/routes/: routes.py
RAG_excels/services/: excel_service.py
back/: .env  Dockerfile  README.md  main.py  requirements.txt
back/controllers/: controllers.py  credentials_controllers.py
back/db/: chroma.py  chroma_cli.py  chroma_manager.py  model_conf.py  (+3 more)
chatbot/: .env  README.md  config.py  dockerfile  main.py  requirements.txt
controllers/: controllers.py
db/: chroma.py  chroma_db.py  chroma_manager.py  model_conf.py  saver.py  tools.py
ddbb/: .env  Dockerfile  README.md  main.py  requirements.txt
front/: Dockerfile  front.py  main.py  package-lock.json  package.json  requirements.txt  testea.py
mysql/: init.sql
routes/: routes.py
services/: rag_graph.py
(+129 files in other folders)
