[project]
name = "rag-excels"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.13.0",
    "fastapi>=0.123.0",
    "langchain-community>=0.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "unstructured[excel]>=0.18.21",
    "uvicorn>=0.38.0",
]
